# semantido

./: .coverage  .gitignore  404.html  CHANGELOG.md  CNAME  CONTRIBUTING.md  CONTRIBUTING.rst  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  generate-docs.yml
assets/js/: page-actions.js
concepts/correctness/: index.html
concepts/determinism/: index.html
concepts/how-agents-consume-context/: index.html
concepts/stack-position/: index.html
concepts/what-is-a-code-native-semantic-layer/: index.html
concepts/what-the-annotations-do/: index.html
concepts/why-semantido/: index.html
docs/: explanation.md  index.md  reference.md  support.md  tutorials.md
docs/assets/css/: page-actions.css
docs/blog/: .authors.yml
docs/blog/posts/: getting_started_with_semantido_in_10_minutes.md
docs/concepts/: what-the-annotations-do.md  why-semantido.md
docs/examples/: 01_getting_started.md  02_osi_time_dimension.md
docs/get-started/: installation.md  quickstart.md
docs/guides/: concept-registry.md  modelling-time.md  refining-context.md  versioning-and-ci.md
docs/integrations/: overview.md
docs/reference/: api.md  architecture.md  semantic-metadata.md
examples/01_getting_started/: semantic.py
examples/01_getting_started/exports/: trade_reporting.osi.yaml  trade_reporting.semantic.json  trade_reporting.semantic.md
examples/01_getting_started/models/: trade_reporting.py
examples/02_osi_time_dimension/: README.md  compare_osi_strategies.py
examples/02_osi_time_dimension/exports/: comparison_report.txt  osi_export_curated.yaml  osi_export_naive.yaml  osi_export_off.yaml
examples/02_osi_time_dimension/models/: core_banking.py
examples/03_md_vs_osi_context/: README.md  experiment_md_vs_osi.py  runner.html  structural_comparison.txt
examples/03_md_vs_osi_context/exports/: context_md.md  context_md_enriched.md  context_md_schema.md  context_osi.yaml  results.csv  structural_comparison.txt
examples/04_federated_agents/: agents.py  bank_a.py  bank_b.py  run_experiment.py
examples/04_federated_agents/models/: bank_a.py  bank_b.py
examples/04_federated_agents/results/: experiment_output.txt
examples/05_toolchain_drift/: alignment.py  authored_stack.py  glossary.yaml  run_experiment.py  sml_bridge.py
examples/05_toolchain_drift/results/: experiment_output.txt
explanation/: index.html
get-started/installation/: index.html
get-started/quickstart/: index.html
get-started/quickstart-with-agent/: index.html
guides/annotating-models/: index.html
guides/concept-registry/: index.html
guides/dbt-and-warehouse-layers/: index.html
guides/modelling-time/: index.html
guides/osi/: index.html
guides/privacy-and-governance/: index.html
guides/refining-context/: index.html
guides/versioning-and-ci/: index.html
hooks/: raw_docs.py
integrations/overview/: index.html
overrides/: main.html
raw-docs/concepts/: correctness.md  determinism.md  how-agents-consume-context.md  stack-position.md  what-is-a-code-native-semantic-layer.md
raw-docs/get-started/: quickstart-with-agent.md  quickstart.md
raw-docs/guides/: annotating-models.md  dbt-and-warehouse-layers.md  osi.md  privacy-and-governance.md
raw-docs/reference/: api.md  semantic-metadata.md
reference/: index.html
reference/api/: index.html
reference/architecture/: index.html
reference/semantic-metadata/: index.html
search/: search_index.json
site/: 404.html  index.html  objects.inv
site/explanation/: index.html
site/how-to-guides/: index.html
site/reference/: index.html
site/search/: search_index.json
site/tutorials/: index.html
src/semantido/: __init__.py  __version__.py  concepts.py
src/semantido/decorators/: __init__.py  semantic_table.py
src/semantido/exporters/: __init__.py  json_exporter.py  markdown_exporter.py  osi_exporter.py  skos_exporter.py
src/semantido/generators/: __init__.py  concept_registry.py  semantic_bridge.py  semantic_layer.py
src/semantido/models/: __init__.py  declarative_base.py  semantic_base.py
support/: index.html
tests/decorators/: test_semantic_table.py  test_time_dimension_param.py
tests/exporters/: test_markdown_concepts.py  test_markdown_exporter.py  test_markdown_split.py  test_osi_exporter.py  test_osi_producer_conformance.py
tests/generators/: conftest.py  test_concept_authoring.py  test_concept_binding.py  test_concept_registry.py  test_deterministic_order.py  test_semantic_base.py  test_semantic_bridge.py  test_semantic_layer.py
tutorials/: index.html
(+5 files in other folders)
