[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "semantido"
dynamic = ["version"]
description = "Semantic layer for SQLAlchemy models that auto-generates LLM-ready schema with rich semantic metadata for text-to-SQL systems and LLM-powered database interactions"
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-only"
authors = [
  { name="Dragos Crintea", email="dragos.crintea@semantido.ai" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
license-files = ["LICEN[CS]E*"]
dependencies = [
    "sqlalchemy"
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "pylint==4.0.4",
    "black==25.12.0"
]

[project.urls]
Homepage = "https://github.com/hikarilabs/semantido"
Documentation = "https://hikarilabs.github.io/semantido/"
Issues = "https://github.com/hikarilabs/semantido/issues"

[tool.hatch.version]
path = "src/semantido/__version__.py"

[tool.hatch.envs.docs]
dependencies = [
    "mkdocs==1.6.1",
    "mkdocstrings[python]==1.0.0",
    "mkdocs-material==9.7.1",
]

[tool.hatch.envs.docs.scripts]
build = "mkdocs build --clean --strict"
serve = "mkdocs serve --dev-addr localhost:8000"