[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "semantido"
dynamic = ["version"]
description = "Semantic layer for SQLAlchemy models that auto-generates LLM-ready schema with rich semantic metadata for text-to-SQL systems and LLM-powered database interactions"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
  { name="Dragos Crintea", email="dragos.crintea@semantido.ai" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
license-files = ["LICEN[CS]E*"]
dependencies = [
    "sqlalchemy>=2.0",
    "typing-extensions>=4.5"
]

[project.optional-dependencies]
osi = [
    "PyYAML==6.0.3"
]
dev = [
    "pytest==9.1.1",
    "pytest-cov==7.1.0",
    "pylint==4.0.6",
    "mypy==2.2.0",
    "ruff==0.15.20",
    "typing-extensions==4.16.0",
    "PyYAML==6.0.3",
    "types-PyYAML>=6.0"
]
publish = [
    "twine==6.2.0",
]

[project.urls]
Homepage = "https://github.com/hikarilabs/semantido"
Documentation = "https://semantido.ai"
Issues = "https://github.com/hikarilabs/semantido/issues"

[tool.hatch.version]
path = "src/semantido/__version__.py"

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "/docs",
    "/tests",
    "/examples"
]

[tool.hatch.build.targets.wheel]
packages = ["src/semantido"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.envs.docs]
dependencies = [
    "mkdocs==1.6.1",
    "mkdocstrings[python]==1.0.4",
    "mkdocs-material==9.7.6",
]

[tool.hatch.envs.docs.scripts]
build = "mkdocs build --clean --strict"
serve = "mkdocs serve --dev-addr localhost:8000"

[tool.ruff.lint.per-file-ignores]
# Example scripts import models for their registration side effect
"examples/**" = ["F401"]

[tool.black]
target-version = ["py311", "py312", "py313"]